--- a/evenOdd.html
+++ b/evenOdd.html
@@ -19,6 +19,8 @@
           number + " هو عدد زوجي";
       } else {
         // هل تستطيع إكمال الكود المطلوب هنا؟
+        document.getElementById("numberType").innerHTML =
+          number + " هو عدد فردي";
       }
     </script>
   </body>
